login oauth success, but still redirect to callback page (not optimized)